--- a/app/src/main/res/layout-v26/activity_numeros_primos.xml
+++ b/app/src/main/res/layout-v26/activity_numeros_primos.xml
@@ -8,23 +8,23 @@
 
     <TextView
         android:id="@+id/tv_act1"
-        android:layout_width="wrap_content"
-        android:layout_height="44dp"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="65dp"
-        android:layout_marginTop="30dp"
-        android:text="@string/tv_act1"
-        android:textSize="24sp" />
-
-    <EditText
-        android:id="@+id/et_act1"
-        android:layout_width="264dp"
+        android:layout_width="248dp"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="65dp"
-        android:layout_marginTop="126dp"
+        android:layout_marginTop="18dp"
+        android:text="@string/tv_act1"
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/editText"
+        android:layout_width="292dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/btn_calcular_act1"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="77dp"
         android:autofillHints=""
         android:ems="10"
         android:hint="@string/hint_et_act1"
@@ -32,21 +32,21 @@
 
     <Button
         android:id="@+id/btn_calcular_act1"
-        android:layout_width="253dp"
-        android:layout_height="58dp"
+        android:layout_width="275dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="65dp"
-        android:layout_marginBottom="70dp"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="79dp"
         android:text="@string/btn_calcular_act1" />
 
     <TextView
-        android:id="@+id/tv_resultado_act1"
-        android:layout_width="147dp"
-        android:layout_height="106dp"
+        android:id="@+id/textView"
+        android:layout_width="159dp"
+        android:layout_height="82dp"
         android:layout_alignParentStart="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="120dp"
-        android:layout_marginBottom="191dp"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="106dp"
+        android:layout_marginTop="210dp"
         android:textSize="24sp" />
 </RelativeLayout>
