--- a/app/src/main/res/layout/activity_juego_aciertos.xml
+++ b/app/src/main/res/layout/activity_juego_aciertos.xml
@@ -1,9 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Activity_juego_aciertos">
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/button"
+        android:layout_width="176dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="8dp"
+        android:text="@string/btn_verificar_act2" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="44dp"
+        android:layout_marginBottom="134dp"
+        android:text="VACIO" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignTop="@+id/textView2"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="1dp"
+        android:layout_toEndOf="@+id/button"
+        android:text="VACIO" />
+
+    <fragment
+        android:id="@+id/fragment3"
+        android:name="com.example.adolfo.practica1tema4.fragment1_actv2"
+        android:layout_width="172dp"
+        android:layout_height="241dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="17dp"
+        tools:layout="@layout/fragment1_actv2" />
+
+    <fragment
+        android:id="@+id/fragment5"
+        android:name="com.example.adolfo.practica1tema4.fragment1_actv2"
+        android:layout_width="172dp"
+        android:layout_height="241dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="17dp"
+        android:layout_marginEnd="15dp"
+        tools:layout="@layout/fragment2_actv2" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textView3"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="-34dp"
+        app:srcCompat="@mipmap/ic_launcher" />
+</RelativeLayout>
