Pantalla principal(Main) completada. También se ha completado la primera activity de números primos. La segunda pantalla ha sido completada. La tercera pantalla ha sido completada.

--- a/app/src/main/res/layout/fragment1_actv2.xml
+++ b/app/src/main/res/layout/fragment1_actv2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment1_actv2">
+    tools:context=".Fragment1_actv2">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -20,5 +20,6 @@
     <ListView
         android:id="@+id/list_paises"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:entries="@array/list_paises_act2" />
 </FrameLayout>
