--- a/app/src/main/res/layout/activity_desplazando_imagenes.xml
+++ b/app/src/main/res/layout/activity_desplazando_imagenes.xml
@@ -1,9 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/scroll_horizontal_act3"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     tools:context=".Activity_desplazando_imagenes">
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <fragment
+            android:id="@+id/fragment6"
+            android:name="com.example.adolfo.practica1tema4.Fragment2_act3"
+            android:layout_width="389dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment2_act3" />
+
+        <fragment
+            android:id="@+id/fragment7"
+            android:name="com.example.adolfo.practica1tema4.Fragment1_act3"
+            android:layout_width="389dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            tools:layout="@layout/fragment1_act3" />
+
+    </LinearLayout>
+
+</HorizontalScrollView>
