--- a/app/src/main/res/layout/activity_juego_aciertos.xml
+++ b/app/src/main/res/layout/activity_juego_aciertos.xml
@@ -7,7 +7,7 @@
     tools:context=".Activity_juego_aciertos">
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btn_verificar_act2"
         android:layout_width="176dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -16,7 +16,7 @@
         android:text="@string/btn_verificar_act2" />
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/tv_vacio_pais"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -26,18 +26,18 @@
         android:text="VACIO" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/tv_vacio_capital"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textView2"
+        android:layout_alignTop="@+id/tv_vacio_pais"
         android:layout_marginStart="13dp"
         android:layout_marginTop="1dp"
-        android:layout_toEndOf="@+id/button"
+        android:layout_toEndOf="@+id/btn_verificar_act2"
         android:text="VACIO" />
 
     <fragment
         android:id="@+id/fragment3"
-        android:name="com.example.adolfo.practica1tema4.fragment1_actv2"
+        android:name="com.example.adolfo.practica1tema4.Fragment1_actv2"
         android:layout_width="172dp"
         android:layout_height="241dp"
         android:layout_alignParentStart="true"
@@ -48,7 +48,7 @@
 
     <fragment
         android:id="@+id/fragment5"
-        android:name="com.example.adolfo.practica1tema4.fragment1_actv2"
+        android:name="com.example.adolfo.practica1tema4.Fragment2_actv2"
         android:layout_width="172dp"
         android:layout_height="241dp"
         android:layout_alignParentTop="true"
@@ -58,11 +58,10 @@
         tools:layout="@layout/fragment2_actv2" />
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textView3"
+        android:id="@+id/imgv_verificar_act2"
+        android:layout_width="139dp"
+        android:layout_height="149dp"
+        android:layout_alignBottom="@+id/tv_vacio_capital"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="-34dp"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:layout_marginBottom="-46dp" />
 </RelativeLayout>
